# cinnamon-settings-daemon

./: configure.ac
cinnamon-settings-daemon/: Makefile.am  cinnamon-settings-manager.c  cinnamon-settings-manager.h  cinnamon-settings-plugin.h  cinnamon-settings-session.c  cinnamon-settings-session.h  main.c  org.cinnamon.ScreenSaver.xml  org.gnome.SessionManager.xml
data/: csd-enums.h  org.cinnamon.settings-daemon.peripherals.gschema.xml.in.in  org.cinnamon.settings-daemon.peripherals.wacom.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.background.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.keyboard.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.media-keys.gschema.xml.in.in  org.cinnamon.settings-daemon.plugins.print-notifications.gschema.xml.in.in
plugins/: Makefile.am
plugins/a11y-settings/: csd-a11y-settings-manager.c
plugins/media-keys/: csd-media-keys-manager.c
plugins/mouse/: csd-mouse-manager.c
plugins/power/: csd-power-manager.c
plugins/power-upower1.0/: Makefile.am  csd-backlight-helper.c  csd-backlight-linux.c  csd-backlight-linux.h  csd-power-constants-update.pl  csd-power-constants.h  csd-power-enums-update.c  csd-power-manager.c  csd-power-manager.h  csd-power-plugin.c  csdpowerconstants.py  gpm-common.c  gpm-common.h  org.cinnamon.settings-daemon.plugins.power.policy.in.in  power.cinnamon-settings-plugin.in  test.py
plugins/screensaver-proxy/: csd-screensaver-proxy-manager.c
